<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.RegisterFragment">

    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_user_name"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_password"/>
    <EditText
        android:id="@+id/register_sure_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_sure_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_cancel"
        android:text="@string/cancel"/>
</LinearLayout>