<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">


    <ImageView
        android:id="@+id/login_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/login_user_name"
        android:hint="@string/please_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_password"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <Button
        android:id="@+id/login_register_btn"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
</LinearLayout>